--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -629,17 +629,17 @@
                           <div class="table-responsive">
                             <table id="company-table" class="table table-sm table-striped table-bordered" style="font-size: 12px;">
                               <thead>
-                                <tr >
-                                  <th scope="col" style="font-size: 8px;">Serial No</th>
-                                  <th scope="col" style="font-size: 8px;">Company ID</th>
-                                  <th scope="col" style="font-size: 8px;">Company Name</th>
-                                  <th scope="col" style="font-size: 8px;">Business Type</th>
-                                  <th scope="col" style="font-size: 8px;">Contact Person</th>
+                                <tr > 
+                                  <th scope="col" style="font-size: 8px;">Serial&nbsp;No</th>
+                                  <th scope="col" style="font-size: 8px;">Company&nbsp;ID</th>
+                                  <th scope="col" style="font-size: 8px;">Company&nbsp;Name</th>
+                                  <th scope="col" style="font-size: 8px;">Business&nbsp;Type</th>
+                                  <th scope="col" style="font-size: 8px;">Contact&nbsp;Person</th>
                                   <th scope="col" style="font-size: 8px;">Email</th>
                                   <th scope="col" style="font-size: 8px;">Address</th>
                                   <th scope="col" style="font-size: 8px;">Management</th>
                                   <th scope="col" style="font-size: 8px;">Phone</th>
-                                  <th scope="col" style="font-size: 8px;">Last Update</th>
+                                  <th scope="col" style="font-size: 8px;">Last&nbsp;Update</th>
                                   <th scope="col" style="font-size: 8px;">Actions</th>
 
                                 </tr>
