--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -27,7 +27,51 @@
     href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet"
   />
+  <style>
+/* Add spinner styling */
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
 
+.spinner {
+  border: 5px solid rgba(255, 255, 255, 0.3); /* Light gray border */
+  border-radius: 50%;
+  border-top: 5px solid #ffffff; /* White border */
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin-right: 10px; /* Add some spacing between the spinner and the message */
+}
+
+.loading-message {
+  color: white;
+  font-size: 18px;
+  margin-top: 10px;
+ /* Align text vertically */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+/* Initially hide spinner */
+#spinner {
+  display: none;
+}
+
+
+  </style>
   <!-- Icons. Uncomment required icon fonts -->
   <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
 
@@ -662,6 +706,13 @@
               </div> -->
                 <div class="container-fluid">
               
+                  <!-- Add spinner markup -->
+                  <div id="spinner" class="spinner-overlay">
+                    <div class="spinner"></div>
+                    <p class="loading-message">Loading..</p>
+                  </div>
+                  
+
                   <div class="card mt-3"> 
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthday Reminder</a></span>
@@ -733,7 +784,7 @@
                                 
                             </div>  
                             <div class="card p-5  mt-3 w-100">
-                              <h6 class="fw-bolder ">Top available nemo candidates</h6>
+                              <h6 class="fw-bolder ">Top available candidates</h6>
                             <div id="rankCharts" ></div>
                             <p class="mt-3 mb-0 pb-0"><a href="availableCandidates.html">Click here for detailed data</a></p>
 
@@ -756,8 +807,7 @@
                  
               </div>
               
-              
-                
+             
                
                 
                 </div>
