Changes done git 60

--- a/views/public/html/add-user.html
+++ b/views/public/html/add-user.html
@@ -624,7 +624,7 @@
                                       <th style="font-size: 8px;">ID</th>
                                       <th style="font-size: 8px;">First Name</th>
                                       <th style="font-size: 8px;">Last Name</th>
-                                      <th  style="font-size: 8px;">Email</th>
+                                      <th style="font-size: 8px;">Email</th>
                                       <th style="font-size: 8px;">Password</th>
                                       <th style="font-size: 8px;">Phone</th>
                                       <th style="font-size: 8px;">Group</th>
@@ -632,7 +632,11 @@
                                       <th style="font-size: 8px;">Client</th>
                                       <th style="font-size: 8px;">Created By</th>
                                       <th style="font-size: 8px;">Master</th>
-                                      <th style="font-size: 8px;">Active</th>
+                                      <th style="font-size: 8px;">Reports</th>
+                                      <th style="font-size: 8px;">Reports All</th>
+                                      <th style="font-size: 8px;">Delete</th>
+                                      <th style="font-size: 8px;">Staff</th>
+
                                       <th class="col-1" style="font-size: 8px;">E/D</th>
                                   </tr>
                               </thead>
