--- a/views/public/html/add-userdata.html
+++ b/views/public/html/add-userdata.html
@@ -751,6 +751,16 @@
                             </div>
                         </div>
                         <div class="row mb-3">
+                          <div class="col-6">
+                              <label class="form-check-label" for="u_delete">Delete</label>
+                          </div>
+                          <div class="col-6">
+                              <div class="form-check">
+                                  <input type="checkbox" id="u_delete" name="u_delete" class="form-check-input">
+                              </div>
+                          </div>
+                      </div>
+                        <div class="row mb-3">
                             <div class="col-6">
                                 <label class="form-check-label" for="u_import">Import</label>
                             </div>
@@ -815,7 +825,16 @@
                               </div>
                           </div>
                       </div>
-                        
+                      <div class="row mb-3">
+                        <div class="col-6">
+                            <label class="form-check-label" for="u_staff">Staff</label>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-check">
+                                <input type="checkbox" id="u_staff" name="u_staff" class="form-check-input">
+                            </div>
+                        </div>
+                    </div>
                     </div>
                 </div>
                 
