--- a/views/public/html/edit-discussion.html
+++ b/views/public/html/edit-discussion.html
@@ -47,7 +47,22 @@
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
+<style>
+.discussion {
+    border: 1px dashed #ccc; /* Border style */
+    padding: 10px; /* Padding to create space around each discussion */
+    margin-bottom: 10px; /* Margin bottom to create space between discussions */
+    display: flex; /* Use flexbox to align content */
+    justify-content: space-between; /* Align content with space between */
+}
 
+.created-date {
+    font-size: 12px;
+    color: #555;
+}
+
+
+</style>
     <!-- Helpers -->
     <script src="../assets/vendor/js/helpers.js"></script>
 
@@ -764,7 +779,7 @@
                                   <!-- End of additional input boxes -->
                               <hr>
                                   <div class="col-md-12 mb-2">
-                                      <div class="">
+                                    <div class="">
                                           <label for="basic_comments" class="form-label">Comments </label>
                                           <div class="row">
                                               <div class="col-md-6">
@@ -814,9 +829,7 @@
                                   <div class="card-footer text-end ">
                                       <button type="submit" class="btn btn-primary">SUBMIT</button>
                                   </div>
-                                  <div class="border border-secondary rounded-3 p-3">
-                                    Hi
-                                </div>
+                                  
                               </form>
                               
                               </div>
@@ -824,7 +837,10 @@
                       </div>
                   </div>
               </div>
-              
+              <div class="border border-secondary rounded-3 p-3 mt-5">  <h4>Discussions :</h4>
+                <div id="comments-section"></div>
+                <div id="fetchedcomments"></div>
+            </div>
             </div>
           
               
