--- a/views/public/html/edit-user.html
+++ b/views/public/html/edit-user.html
@@ -796,7 +796,10 @@
                               <input type="checkbox" id="u_write" name="u_write" class="form-check-input">
                               <label class="form-check-label" style="font-size: 12px;" for="u_write">Write</label>
                           </div>
-                         
+                          <div class="col-md-3 form-check">
+                            <input type="checkbox" id="u_delete" name="u_delete" class="form-check-input">
+                            <label class="form-check-label" style="font-size: 12px;" for="u_delete">Delete</label>
+                        </div>
                           <div class="col-md-3 form-check">
                               <input type="checkbox" id="u_import" name="u_import" class="form-check-input">
                               <label class="form-check-label" style="font-size: 12px;" for="u_import">Import</label>
@@ -821,7 +824,10 @@
                         <input type="checkbox" id="u_reports_all" name="u_reports" class="form-check-input">
                         <label class="form-check-label" style="font-size: 12px;" for="u_reports_all">All Reports</label>
                     </div>
-                         
+                    <div class="col-md-3 form-check">
+                      <input type="checkbox" id="u_staff" name="u_staff" class="form-check-input">
+                      <label class="form-check-label" style="font-size: 12px;" for="u_staff">Staff</label>
+                  </div>
                       </div>
                   </div>
               
