--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -28,6 +28,9 @@
     rel="stylesheet"
   />
   <style>
+
+
+
 /* Add spinner styling */
 .spinner-overlay {
   position: fixed;
@@ -70,7 +73,14 @@
   display: none;
 }
 
-
+.quarter {
+    display:flex;
+    justify-content: space-between;
+    border: 1px dashed #ccc;
+    padding: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
   </style>
   <!-- Icons. Uncomment required icon fonts -->
   <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
@@ -730,31 +740,14 @@
                      
                     </div>
                        <div class=" text-center d-flex justify-content-center  ">
-                            <div class=" mt-3  ">
-                              
-                                <div class="candidate-status card me-3 rounded-3  p-5 pt-0">
-                                  <h6 class="text-center pt-5  fw-bolder">Candidate Status on<br><br> <span id="datetime" style="font-size: 10px;" class="text-primary"></span></h6><hr class="bg-dark">
-                                    <div class=""  >
-                                    <div class="border border-dark  rounded-3 pb-0 " >
-                                    <table class="table table-border-bottom-0 pb-0 mb-0 " >
-                                        <thead>
-                                            <tr>
-                                                <th scope="col" style="font-size: 8px;">Proposed</th>
-                                                <th scope="col" style="font-size: 8px;">Approved</th>
-                                                <th scope="col" style="font-size: 8px;">Joined</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td class="mt-2 mb-0 "  ><span id="proposedCount" ></span></td>
-                                                <td class="mt-2 mb-0 " ><span id="approvedCount" ></span></td>
-                                                <td ><span id="joinedCount"  class="badge bg-primary text-white "></span></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    </div>
-                                    </div>
-                                    <div class="mb-0 mt-3">
+                        
+                            <div class=" mt-3 bg-white rounded-3 me-3 shadow-sm">
+                              <h6 class="text-center mt-5 fw-bolder">Live Candidate Status <br><br> <div id="datetime" style="font-size: 10px;" class="text-primary"></div> </h6>
+
+                                <div class="candidate-status  rounded-3  p-5 pt-0">
+                                 
+                                    
+                                    <div class="mb-0 mt-5">
                                       <div class="border border-dark rounded-3  pb-0 " >
                                           <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
                                               <thead class="">
@@ -771,31 +764,56 @@
                                               </tbody>
                                           </table>
                                       </div>
+                                      
                                   </div>
-                                    <div class="todays-call mt-4 ">
-                                      <div class="d-flex justify-content-sm-center  p-2 pb-5">
-                                      <span class="  me-3 fw-bolder text-dark mt-1" style="font-size: 12px;">Todays Calls :</span>
-                                      <span><span id="callCount"></span></span>
-                                      </div>
+                                  <div class=" todays-call border border-dark rounded-3 mt-5 pb-0 " >
+                                    <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
+                                      <tbody>
+                                        <tr>
+                                          <td class="fw-bolder text-dark" style="font-size: 12px;">Todays Calls:</td>
+                                        </tr>
+                                        <tr>
+                                          <td><div id="callCount"></div></td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
                                   </div>
+                                  
                                 </div>
                                   
                               
                                 
                             </div>  
-                            <div class="card p-5  mt-3 w-100">
+                            <div class="card p-5 pb-0 mt-3 w-100">
                               <h6 class="fw-bolder ">Top available candidates</h6>
                             <div id="rankCharts" ></div>
-                            <p class="mt-3 mb-0 pb-0"><a href="availableCandidates.html">Click here for detailed data</a></p>
-
                             </div>
                             
-
+                           
                             
                         </div>
-                        
-                        <div class="d-flex justify-content-center mt-4">
-                          <span class="fw-bolder">Nautilus Shipping & Nemo</span>
+                        <div class="card p-5 text-center mt-3">
+                         <!-- HTML layout in the client-side -->
+<!-- HTML layout using Bootstrap -->
+<div class="container">
+  <div class="row">
+    <div class="col">
+    
+          <h4 class="card-title pb-0 mb-0" >Discussion Counts</h4>
+          <p class="text-primary text-end" style="font-size: 10px;margin-top: 0px;padding-top: 0px;">Hover over the Bars to display more details</p>
+          <ul id="discussionCounts" class="list-group">
+            <!-- Quarter data will be populated here -->
+          </ul>
+        </div>
+      
+  </div>
+</div>
+
+
+
+                        </div>
+                        <div class="d-flex justify-content-center mt-5">
+                          <span  style="font-size: 8px;">NAUTILUS SHIPPING</span>
 
                       </div>
                     
