--- a/views/public/html/seaserviceedit.html
+++ b/views/public/html/seaserviceedit.html
@@ -710,7 +710,7 @@ function decodeToken(token) {
     console.log(id)
     try {
         const token = localStorage.getItem('token');
-        const response = await axios.get(`https://nemonode.ivistaz.co/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
+        const response = await axios.get(`http://localhost:4000/candidate/get-sea/${id}`, { headers: { "Authorization": token } });
         console.log(response)
         const seaService = response.data.editSea[0];
         console.log("edit response", response.data)
@@ -760,7 +760,7 @@ document.addEventListener('DOMContentLoaded', async function () {
         try {
             // Send PUT request to update sea service data
             const token = localStorage.getItem('token');
-            const response = await axios.put(`https://nemonode.ivistaz.co/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
+            const response = await axios.put(`http://localhost:4000/candidate/edit-sea-service/${id}`, formData, { headers: { "Authorization": token } });
             console.log(response);
             alert('Sea Service record updated successfully!');
             // editSeaServiceForm.reset();
